# AI-GP_V2

./: .gitignore  README.md  isaac_python.bat  pyproject.toml
aigp/: __init__.py
aigp/agents/: __init__.py  asymmetric_ac.py  curriculum.py  distillation.py  export_onnx.py  models.py  ppo_trainer.py
aigp/assets/: __init__.py  gate_cfg.py  neros_drone_cfg.py
aigp/deployment/: __init__.py  hardware_interface.py  policy_inference.py  px4_bridge.py  safety_monitor.py
aigp/domain_rand/: __init__.py  custom_events.py  events_cfg.py
aigp/envs/: __init__.py  actions.py  observations.py  racing_env.py  racing_env_cfg.py  rewards.py  scene_cfg.py  terminations.py
aigp/perception/: __init__.py  gate_detector.py  image_preprocessor.py  pnp_localizer.py  vio_ekf.py
aigp/track/: __init__.py  track_generator.py  track_registry.py  track_types.py
aigp/utils/: __init__.py  config_loader.py  math_utils.py  vram_profiler.py
config/: deploy_config.yaml  race_config.yaml  train_config.yaml
scripts/: benchmark_inference.py  create_gate_usd.py  create_quadrotor_usd.py  deploy.py  evaluate.py  export.py  generate_track.py  train.py  validate_quadrotor_usd.py  validation_report.txt
tests/: test_actions.py  test_config_loader.py  test_gate_detector.py  test_observations.py  test_policy_inference.py  test_rewards.py  test_track_generator.py  test_vio_ekf.py
tests/integration/: test_env_rollout.py  test_training_loop.py
